--- a/index.html
+++ b/index.html
@@ -1,26 +1,26 @@
 ---
 layout: default
 title: Drew Austin
-description: A dangerous site deserves a dangerous blog.
+description: You're spoiling all the paint work
 ---
 
 <div class="home">
   <div class="full-hero hero-home">
     <div class="hero-content">
-      <h1>CODE DANGEROUSLY</h1>
+      <h1>KNEELING BUS</h1>
       <ul class="social-list">
         <li>
-          <a href="https://facebook.com/learnenough" class="social-link">
+          <a href="https://facebook.com/kneelingbus" class="social-link">
             <i class="fab fa-facebook-f"></i>
           </a>
         </li>
         <li>
-          <a href="https://twitter.com/learnenough" class="social-link">
+          <a href="https://twitter.com/kneelingbus" class="social-link">
             <i class="fab fa-twitter"></i>
           </a>
         </li>
         <li>
-          <a href="https://github.com/learnenough" class="social-link">
+          <a href="https://github.com/andrewbaustin" class="social-link">
             <i class="fab fa-github"></i>
           </a>
         </li>
@@ -28,14 +28,16 @@ description: A dangerous site deserves a dangerous blog.
     </div>
   </div>
 <div class="home-callout">
-  <h1 class="callout-title">The Learn Enough Story</h1>
+  <h1 class="callout-title">Lorem Ipsum</h1>
   <div class="callout-copy">
     <p>
-      Learn Enough to Be Dangerous is a leader in the movement to teach the world
-      <em>technical sophistication</em>, which includes both "hard skills" like
-      coding, command lines, and version control, and "soft skills" like guessing
-      keyboard shortcuts, Googling error messages, and knowing when to just
-      reboot the darn thing.
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+      commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+      est laborum.
     </p>
     <p>
       We believe there are <strong>at least a billion people</strong> who can
